--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom</artifactId><version>1.7.2</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom</artifactId><version>1.7.2-POST-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -71,7 +71,7 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
     <connection>scm:git:git://github.com/ao-apps/semanticcms-section-bom.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/semanticcms-section-bom.git</developerConnection>
     <url>https://github.com/ao-apps/semanticcms-section-bom</url>
-    <tag>semanticcms-section-bom-1.7.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
