--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,9 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
       <dependency>
         <groupId>com.aoapps</groupId><artifactId>ao-concurrent</artifactId><version>4.0.3${POST-SNAPSHOT}</version>
       </dependency>
+      <dependency>
+        <groupId>com.aoapps</groupId><artifactId>ao-taglib</artifactId><version>7.2.1${POST-SNAPSHOT}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
