--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,9 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
       <dependency>
         <groupId>com.aoapps</groupId><artifactId>ao-taglib</artifactId><version>7.2.1${POST-SNAPSHOT}</version>
       </dependency>
+      <dependency>
+        <groupId>com.aoapps</groupId><artifactId>ao-tempfiles</artifactId><version>3.0.2${POST-SNAPSHOT}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
