--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,9 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
       <dependency>
         <groupId>com.aoapps</groupId><artifactId>ao-tempfiles</artifactId><version>3.0.2${POST-SNAPSHOT}</version>
       </dependency>
+      <dependency>
+        <groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.11.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
