--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,9 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
       <dependency>
         <groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.12.5</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>3.13.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
