--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-section-bom - Bill of Materials (BOM) for SemanticCMS Section features.
-Copyright (C) 2019, 2020, 2021, 2022, 2023  AO Industries, Inc.
+Copyright (C) 2019, 2020, 2021, 2022, 2023, 2024  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -172,7 +172,7 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
         <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.20.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
       </dependency>
       <dependency>
-        <groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.12.5</version>
+        <groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.12.6</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>3.14.0</version>
