--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
         <groupId>com.semanticcms</groupId><artifactId>semanticcms-section-style</artifactId><version>1.8.0${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
-        <groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.10.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+        <groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.10.0${POST-SNAPSHOT}</version>
       </dependency>
       <!-- Imports -->
       <dependency>
@@ -142,7 +142,7 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.10.0-SNAPSHOT</version>
+        <groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.10.0-POST-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
